add updates and deletes, and too readme

--- a/.env.template
+++ b/.env.template
@@ -1,10 +1,14 @@
 
 POSTGRE_USER="userdefault"
 POSTGRE_PASSWORD="password"
-POSTGRE_DB="postgres:db"
+POSTGRE_DB="portfolio-db"
 
 ADMIN_EMAIL="useradmin@mail"
 ADMIN_PASSWORD="password"
 ADMIN_NAME="adminname"
 
-DATABASE_URL="url:db"
+JWT_SECRET=secret
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=cludinary-name
+
+DATABASE_URL="postgresql://userdefault:password@localhost:5432/portfolio-db"
