delete images from cloudinary

--- a/.env.template
+++ b/.env.template
@@ -7,8 +7,11 @@ ADMIN_EMAIL="useradmin@mail"
 ADMIN_PASSWORD="password"
 ADMIN_NAME="adminname"
 
-JWT_SECRET=secret
+JWT_SECRET=secretkey
 
-NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=cludinary-name
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=ddnatsso7
+CLOUDINARY_API_SECRET=apisecret
+CLOUDINARY_API_KEY=apikey
+CLOUDINARY_FOLDER=folder
 
 DATABASE_URL="postgresql://userdefault:password@localhost:5432/portfolio-db"
