--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@prisma/client": "^5.20.0",
     "@react-pdf/renderer": "^4.0.0",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.5.1",
     "cookies-next": "^4.3.0",
     "jose": "^5.9.4",
     "next": "14.2.14",
