--- a/package.json
+++ b/package.json
@@ -13,25 +13,29 @@
     "@react-pdf/renderer": "^4.0.0",
     "bcrypt": "^5.1.1",
     "cloudinary": "^2.5.1",
-    "cookies-next": "^4.3.0",
+    "cookies-next": "^5.0.2",
     "jose": "^5.9.4",
-    "next": "14.2.14",
+    "next": "15.0.4",
     "next-cloudinary": "^6.15.0",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.0.0",
+    "react-dom": "19.0.0",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.6"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.1",
     "eslint": "^8",
-    "eslint-config-next": "14.2.14",
+    "eslint-config-next": "15.0.4",
     "postcss": "^8",
     "prisma": "^5.20.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.0.0",
+    "@types/react-dom": "19.0.1"
   }
 }
